k8s/menifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: vikassangale/chatapp-frontend:latest
        ports:
        - containerPort: 80
