k8s/menifests/mongo-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: chat-app
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
